Modified project to use jboss-ejb3-embedded-standalone 1.0.0-alpha-2